Pseudo-elements are not the root.  Bug 334602, r+sr=dbaron